added an ir with a dsl to generate ir code; simple code generator which generates bytecode!

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ test {
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        freeCompilerArgs = ["-Xinline-classes"]
+    }
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
